styles.css
/* ... */
.form div{
    width: 100%;
}
.container-subject{
    grid-column: 1/3;
}
.container-msg{
    grid-column: 1/3;
}
.container-msg textarea{
    width: 100%;
}
.form label{
    display: block;
    margin: .6rem 0;
    color: white;
}
sup{
    color: red;
}
.form input:not([type="submit"]){
    color: white;
    width: 100%;
    height: 46px;
    border-radius: 10px;
    outline: none;
    border: none;
    background-color: black;
    -webkit-box-shadow: 0px 2px 5px 0px rgb(37, 37, 37);
    -moz-box-shadow: 0px 2px 5px 0px rgb(37, 37, 37);
    box-shadow: 0px 2px 5px 0px rgb(37, 37, 37);
    font-size: 1rem;
    padding: 0;

}


textarea{
    font-size: 1rem;
    padding: 0;

    background-color: black;
    -webkit-box-shadow: 0px 2px 5px 0px rgb(37, 37, 37);
    -moz-box-shadow: 0px 2px 5px 0px rgb(37, 37, 37);
    box-shadow: 0px 2px 5px 0px rgb(37, 37, 37);
    border: none;
    outline: none;

}

@media(min-width:400px){
    .form input:not([type="submit"]){
        padding: 0 1rem;

        width: 100%;
    }
    textarea{
        padding: 1rem 1rem;

    }


}


.container-submit{
    grid-column: 1/3;
    text-align: center;
}
.form input[type="submit"]{
    padding: 1rem 1rem;
    border-radius: 10px;
    text-decoration: none;
    color: white;
    font-weight: 600;
    transition: .5s all;
    width: 220px;
    font-size: 1rem;
    background-color: rgba(10, 10, 10, 0.727);;
    border: none;
}

.form input[type="submit"]:hover{
    background-color: rgb(0, 0, 0);
    
    cursor: pointer;

}


@keyframes moverAvion {
    0%{


        transform: rotate(-40deg) 
    }
    30%,35%{
        transform: rotate(-40deg) 
    }

  
  
   100%{
       bottom: 20%;
        
   }


    
}

/*FEATURES*/
.city{
 
    position: relative;
    height: 100%;
    width: 100%;
    z-index: 1000000;
}
.container-features{
    height: 500px;
    overflow-y: scroll;
    overflow-x: hidden;
}


@media(min-width:870px){
  
    .container-features{

        overflow-y: hidden;
        overflow-x: hidden;
     
        display: grid;
        grid-template-columns: repeat(4,1fr);
    
    }
    

}

.container-cityimg{
    height: 500px;
}
.container-cityimg img{
    object-fit: cover;
    filter: brightness(.6);
}

.city{
    transition: transform .5s ease-in-out;
}

.city:hover > .panel{
    display: flex;
    align-items: flex-end;
    opacity: 1;
}
.city:hover{transform: scale(1.025);}
.panel{
    display: none;
    opacity: 0;
    background-color:#1f1f1fb1;
    position: absolute;
    height: 100%;
    top: 0;
    width: 100%;
    transition: opacity .5s ease-in-out;
 
}
.panel:hover{
    cursor: pointer;

}
.panel a:hover{
    text-decoration: overline;
}


.panel-visible{
    display: flex;
    align-items: end;
    opacity: 1;
}

.panel a{
    color: white;
    margin: 1rem 1rem;
    text-transform: uppercase;
    font-weight: 700;
}


.container-citytext{
    display: flex;
    flex-direction: column;
    margin: 0 1rem;
    justify-content: center;
    position: absolute;
    top: 0;
    color: white;
    width: 100%;
    height: 100%;
}

.container-citytext p,h2{
    margin: 0;
    text-transform: uppercase;
}
.container-citytext p{
    letter-spacing: 1px;
    width: 100%;
    font-size: .7rem;
}

@media(min-width:870px){
    
    .container-citytext p,h2{
        margin: 0;
        text-transform: uppercase;
    }
    .container-citytext p{
      
        font-size: 1rem;
    }
    .container-citytext h2{
     
        font-size: 2rem;
    }
    
}



.footer{
    background-color: #1E1E1E;
    padding: .5rem 0;
    font-size: .8rem;
    color: white;
    text-align: center;
}


@media(min-width:500px){
    .footer{
        font-size: 1rem;
    }

}

.container-social-rate{
   display: grid;
   row-gap: 3rem;
   max-width: 1300px;
   place-items: center;
   margin: 0 auto;
}
@media(min-width:1220px){
    .container-social-rate{
        grid-template-columns: repeat(3,1fr);
 
    }

}
.company{
    height: 100%;
}
.company p{
    max-width: 250px;
    margin: 0;
    font-size: .8rem;
    text-align: justify;
}
.opinion{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100%;
}
.opinion h3{
    margin: 0;
}
.socials{
    height: 100%;
  
}
.title-socials{
    margin-top: 1.5rem;
}
.icon-socials{
    margin: 1.7rem 0;
}
.valoracion {
    display: flex;
    flex-direction: row-reverse;
}
.valoracion button {
    background-color: initial;
    border: 0;
    color: var(--color-inactivo);
    transition: 1s all;

 


}
.company-data{
    padding: 1rem 0;
    background-color: black;
    color: white;
    text-align: center;
}
.valoracion button:hover {
    cursor: pointer;
    color: var(--color-estrella);
    transform: rotate(360deg);
    filter: drop-shadow(0px 0px 58px rgba(255,248,48,1));
}
button:nth-child(1):hover ~ button {
    color: var(--color-estrella);
    transform: rotate(360deg);
    

}
button:nth-child(2):hover ~ button {
    color: var(--color-estrella);
    transform: rotate(360deg);
}
button:nth-child(3):hover ~ button {
    color: var(--color-estrella);
    transform: rotate(360deg);
}
button:nth-child(4):hover ~ button {
    color: var(--color-estrella);
    transform: rotate(360deg);
}
button:nth-child(5):hover ~ button {
    color: var(--color-estrella);
    transform: rotate(360deg);
}

/*SOCIAL MEDIA*/
.c-icon {
    width:  36px;
    height: 36px;
    fill: currentColor;
    transition: .2s;
}

.c-link--facebook:hover  { color: #3b5998 }
.c-link--twitter:hover   { color: #55acee }
.c-link--pinterest:hover { color: #bd081c }
.c-link--instagram:hover { color: #833ab4 }
.c-link--facebook:hover::after  { background: #3b5998 }
.c-link--twitter:hover::after   { background: #55acee }
.c-link--pinterest:hover::after { background: #bd081c }
.c-link--instagram:hover::after { background: #833ab4 }

.c-link {
    position: relative;
    color: #bbb;
}

.c-link:not(:last-of-type) {
    margin-right: 15px;
}
/* ... */

